# XiaoHeiCat

./: .gitignore  LICENSE.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: docs.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xhh_dex_memory_scanner.cpp
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: #U6574#U4f53#U8c03#U7528#U94fe.drawio  .$整体调用链.drawio.bkp  chinese_search_stemmer_fallback.js
docs/source/development/: build.rst  debugging.rst  index.rst  logs.rst  modules.rst  (+5 more)
example/: stack_trace_demo.js
example/okhttp_logger/: logger.js  okhttp.js
example/settings_all_types/: settings.json
examples/: cn.ticktick.task.js  com.baviux.voicechanger.js  csair_jiami_hook.js  dumpdex.js  java_bridge_smoke_test.js  java_proxy_smoke_test.js  java_reflection_smoke_test.js  mcp_tool_register.js  qidian.js  qidian_dex_locate.js  qidian_dex_search.js  smali_search.js  stack_trace_demo.js  toast.js
examples/multi_asset_showcase/: README.md  index.js  main.js
examples/okhttp_logger/: config.js  index.js  logger.js  okhttp.js  reflect.js  utils.js
examples/settings_all_types/: index.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: application_on_create_log.js
webide-src/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webide-src/src/: App.tsx  LogsPage.tsx  TerminalPage.tsx  main.tsx  styles.css
(+166 files in other folders)
